// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionControl tests should render correctly with all selected items 1`] = `
<styled.div>
  <styled.span>
    Todos os 3 itens foram selecionados
  </styled.span>
  <Styled(styled.span)
    onClick={[Function]}
  >
    <Styled(Icon)
      path="M19.36,2.72L20.78,4.14L15.06,9.85C16.13,11.39 16.28,13.24 15.38,14.44L9.06,8.12C10.26,7.22 12.11,7.37 13.65,8.44L19.36,2.72M5.93,17.57C3.92,15.56 2.69,13.16 2.35,10.92L7.23,8.83L14.67,16.27L12.58,21.15C10.34,20.81 7.94,19.58 5.93,17.57Z"
    />
     Limpar seleção
  </Styled(styled.span)>
  <styled.div />
</styled.div>
`;

exports[`SelectionControl tests should render correctly with almost all selected items 1`] = `
<styled.div>
  <styled.span>
    3 itens foram selecionados
  </styled.span>
  <Styled(styled.span)
    onClick={[Function]}
  >
    <Styled(Icon)
      path="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
    />
    Selecionar todos os 4 itens
  </Styled(styled.span)>
  <Styled(styled.span)
    onClick={[Function]}
  >
    <Styled(Icon)
      path="M19.36,2.72L20.78,4.14L15.06,9.85C16.13,11.39 16.28,13.24 15.38,14.44L9.06,8.12C10.26,7.22 12.11,7.37 13.65,8.44L19.36,2.72M5.93,17.57C3.92,15.56 2.69,13.16 2.35,10.92L7.23,8.83L14.67,16.27L12.58,21.15C10.34,20.81 7.94,19.58 5.93,17.57Z"
    />
     Limpar seleção
  </Styled(styled.span)>
  <styled.div />
</styled.div>
`;

exports[`SelectionControl tests should render correctly with some selected items 1`] = `
<styled.div>
  <styled.span>
    3 itens foram selecionados
  </styled.span>
  <Styled(styled.span)
    onClick={[Function]}
  >
    <Styled(Icon)
      path="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
    />
    Selecionar todos os 10 itens
  </Styled(styled.span)>
  <Styled(styled.span)
    onClick={[Function]}
  >
    <Styled(Icon)
      path="M19.36,2.72L20.78,4.14L15.06,9.85C16.13,11.39 16.28,13.24 15.38,14.44L9.06,8.12C10.26,7.22 12.11,7.37 13.65,8.44L19.36,2.72M5.93,17.57C3.92,15.56 2.69,13.16 2.35,10.92L7.23,8.83L14.67,16.27L12.58,21.15C10.34,20.81 7.94,19.58 5.93,17.57Z"
    />
     Limpar seleção
  </Styled(styled.span)>
  <styled.div />
</styled.div>
`;

exports[`SelectionControl tests should render nothing with no props 1`] = `""`;
